openturns/1.25/_sources/auto_reliability_sensitivity/sensitivity_analysis/index.rst.txt


.. _sphx_glr_auto_reliability_sensitivity_sensitivity_analysis:

.. _Sensitivity analysis:

Sensitivity analysis
--------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sobol&#x27; sensitivity indices using rank-based algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_rank_sobol_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_rank_sobol.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sobol' sensitivity indices using rank-based algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate Sobol&#x27; indices for the beam by simulation algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_sobol_simulationalgorithm_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_sobol_simulationalgorithm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate Sobol' indices for the beam by simulation algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="FAST sensitivity indices">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_fast_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_fast.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FAST sensitivity indices</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Parallel coordinates graph as sensitivity tool">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_par_coo_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_par_coo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parallel coordinates graph as sensitivity tool</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate Sobol&#x27; indices for a function with multivariate output">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_sobol_multivariate_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_sobol_multivariate.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate Sobol' indices for a function with multivariate output</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sobol&#x27; sensitivity indices from chaos">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_functional_chaos_sensitivity_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_functional_chaos_sensitivity.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sobol' sensitivity indices from chaos</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate Sobol&#x27; indices for the Ishigami function by a sampling method: a quick start guide to sensitivity analysis">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_sobol_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_sobol.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate Sobol' indices for the Ishigami function by a sampling method: a quick start guide to sensitivity analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the ANCOVA indices">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_ancova_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_ancova.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the ANCOVA indices</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The HSIC sensitivity indices: the Ishigami model">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_hsic_estimators_ishigami_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_hsic_estimators_ishigami.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">The HSIC sensitivity indices: the Ishigami model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example of sensitivity analyses on the wing weight model">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_wingweight_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_wingweight.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Example of sensitivity analyses on the wing weight model</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_rank_sobol
   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_sobol_simulationalgorithm
   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_fast
   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_par_coo
   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_sobol_multivariate
   /auto_reliability_sensitivity/sensitivity_analysis/plot_functional_chaos_sensitivity
   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_sobol
   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_ancova
   /auto_reliability_sensitivity/sensitivity_analysis/plot_hsic_estimators_ishigami
   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_wingweight

